--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
 		<meta name="description" content="I am a front end developer."/>
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
 		<!-- Title -->
 		<title>Arana Wang</title>
-		
+
 		<!-- CSS -->
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet"> -->
 
 		<!-- icon -->
 	<!-- 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" /> -->	
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" /> -->
     </head>
 
 <body class="website-background-black">
-	
+
 <div>
 	<div class="container">
 		<h1>
 
 			<div class="text-color-white hide-text-block">
+        <a href="about.html"></a>
 				<div onmouseover="changeText(this,'About')" onmouseout="changeText(this,'Hello')" href="#">Hello</div>
 			</div>
-	
+
 			<div class="text-color-red hide-text-block" id="red">
 				<div onmouseover="changeText(this,'Work')" onmouseout="changeText(this,'I am')">I am</div>
 			</div>
@@ -37,13 +38,13 @@
 			<div class="text-color-red hide-text-block" id="red">
 				<div onmouseover="changeText(this,'Contact')" onmouseout="changeText(this,'Arana')">Arana</div>
 			</div>
-		</h1>			
+		</h1>
 	</div>
 </div>
 
 <!-- Javascript -->
 <script src="homepage.js"></script>
-			
+
 </body>
 </html>
 
