updated new footer, fonts.

--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
 	<meta name="description" content="I am a front end developer."/>
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
 	<!-- Title -->
 	<title>About</title>
-		
+
 	<!-- CSS -->
 	<link href="about.css" rel="stylesheet" type="text/css">
 </head>
@@ -29,7 +29,7 @@
 					Currently, I'm a full time student studying computer science and is looking for internship opportunities. Please do not hesitate to reach out - I'm happy to chat.
 				</p>
 			</div>
-			
+
 		</div>
 	</div>
 	<div class="footer">
@@ -42,10 +42,10 @@
 				</p>
 			</div>
 			<div class="social">
-				<a href="#" target="_blank" title="Linkedin">LinkedIn</a>
-				<a href="#" target="_blank" title="Resume">Resume</a>
+				<a href="#" target="_blank" title="Linkedin" class="footerletter">LinkedIn | </a>
+				<a href="#" target="_blank" title="Resume" class="footerletter">Resume</a>
 			</div>
-			
+
 		</div>
 	</div>
 </body>
