--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
 		<h1>
 
 			<div class="text-color-white hide-text-block">
-        <a href="about.html"></a>
-				<div onmouseover="changeText(this,'About')" onmouseout="changeText(this,'Hello')" href="#">Hello</div>
+        <a href="about.html" style=" text-decoration: none; color: white;">
+				  <div onmouseover="changeText(this,'About')" onmouseout="changeText(this,'Hello')" href="#">Hello</div>
+			   </a>
+      </div>
+
+			<div class="text-color-red hide-text-block" id="red">
+        <a href="work.html">
+				  <div onmouseover="changeText(this,'Work')" onmouseout="changeText(this,'I am')">I am</div>
+        </a>
 			</div>
 
 			<div class="text-color-red hide-text-block" id="red">
-				<div onmouseover="changeText(this,'Work')" onmouseout="changeText(this,'I am')">I am</div>
-			</div>
-
-			<div class="text-color-red hide-text-block" id="red">
-				<div onmouseover="changeText(this,'Contact')" onmouseout="changeText(this,'Arana')">Arana</div>
+        <a href="contact.html">
+				  <div onmouseover="changeText(this,'Contact')" onmouseout="changeText(this,'Arana')">Arana</div>
+        </a>
 			</div>
 		</h1>
 	</div>
