--- a/about.html
+++ b/about.html
@@ -21,17 +21,53 @@
 				<img src="image/123.jpg" alt="photo of me">
 			</div>
 			<div class="aboutintro">
-				<h1 class="heading">Hello!</h1>
+				<h1 class="heading">About</h1>
 				<p class="paragraph">
-					I'm Arana Wang, an artist/front-end developer based in Shanghai, focus on Wechat mini program and web design.
+					I'm Arana, a self-taught front-end developer in Shanghai, focus on Wechat mini program and web design.
 				</p>
+        <p class="paragraph">
+          Outside of coding, I coach a running club, Brun. It welcomes anyone who wants to build a running habit with encouragment and accountability. While I like being active, sewing is also my passion. My recent project Celebration, explores the relationship of technology with writing and the loss of genuine emotional expression.
+        </p>
 				<p class="paragraph">
-					Currently, I'm a full time student studying computer science and is looking for internship opportunities. Please do not hesitate to reach out - I'm happy to chat.
+					Currently, I'm a full time student studying computer science and is looking for internship opportunities. Please do not hesitate to reach out - I'm happy to chat about collaborations, work, or simply connect with you.
 				</p>
+
+        <!-- two projects start -->
+        <div class="project-container">
+
+          <!-- Brun project -->
+          <div class="wrapper">
+            <img src="image/brun.jpg" alt="" class="project-image">
+            <div class="overlay">
+              <div class="c-content">
+                <span>Brun</span>
+              </div>
+              </div>
+            </div>
+
+            <!-- celebration project -->
+            <div class="wrapper">
+              <img src="image/c1.jpg" alt="" class="project-image">
+              <div class="overlay">
+                <div class="c-content">
+                  <a href="https://cargocollective.com/aranawang/Celebracion" target="_blank"><span>Celebration</span></a>
+                </div>
+              </div>
+            </div>
+
+        </div>
+        <!--  two projects start -->
+
 			</div>
 
 		</div>
 	</div>
+
+
+
+
+
+  <!-- footer  -->
 	<div class="footer">
 		<div class="footercon">
 			<div class="email">
@@ -48,5 +84,6 @@
 
 		</div>
 	</div>
+
 </body>
 </html>
