reorganized the page.

--- a/about.html
+++ b/about.html
@@ -21,7 +21,12 @@
 				<img src="image/123.jpg" alt="photo of me">
 			</div>
 			<div class="aboutintro">
-				<h1 class="heading">About</h1>
+        <!-- about header -->
+        <div class="project_index">
+          <h1 class="heading">About</h1>
+          <a href="file:///Users/wangarana/Desktop/website/index.html" class="a">Index</a>
+        </div>
+
 				<p class="paragraph">
 					I'm Arana, a self-taught front-end developer in Shanghai, focus on Wechat mini program and web design.
 				</p>
