clean the code and change the format

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,46 @@
-contact.html
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Description -->
+    <meta name="author" content="Arana Wang"/>
+    <meta name="description" content="I am a front end developer."/>
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Title -->
+    <title>Arana Wang</title>
+
+    <!-- CSS -->
+    <link href="contact.css" rel="stylesheet" type="text/css">
+    </head>
+
+<body>
+
+<!-- modal section start -->
+<div class="bg-modal">
+  <div class="modal-content">
+    <div class="close">+</div>
+    <div class="modal-content-header">
+      <h4>Contact me</h4>
+      <a href="mailto:aranayww@gmail.com" class="huge-text underline-link js-cursor-follower-active">aranayww@gmail.com</a>
+    </div>
+    <div class="modal-content-social">
+      <h4>Social</h4>
+      <a href="#" target="_blank" title="Linkedin" class="footerletter">LinkedIn</a>
+      <a href="#" title="divider"> | </a>
+      <a href="#" target="_blank" title="Resume">Resume</a>
+    </div>
+
+
+  </div>
+</div>
+<!-- modal section end -->
+
+
+
+</body>
+</html>
+
+
+<!-- https://www.dejan.works/ -->
