--- a/index.html
+++ b/index.html
@@ -13,19 +13,12 @@
 
 		<!-- CSS -->
 		<link href="style.css" rel="stylesheet" type="text/css">
-		<!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet"> -->
-
-		<!-- icon -->
-	<!-- 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" /> -->
     </head>
 
 <body class="website-background-black">
-
-<div>
+<!-- home banner -->
 	<div class="container">
 		<h1>
-
 			<div class="text-color-white hide-text-block">
         <a href="about.html" style=" text-decoration: none; color: white;">
 				  <div onmouseover="changeText(this,'About')" onmouseout="changeText(this,'Hello')" href="#">Hello</div>
@@ -45,7 +38,19 @@
 			</div>
 		</h1>
 	</div>
-</div>
+
+
+<!-- project section  -->
+  <div class="project-section">
+    <div class="wrapper">
+      <div class="project-heading">
+        <h5>Selected projects</h5>
+        <h2>Case studies</h2>
+      </div>
+    </div>
+
+  </div>
+
 
 <!-- Javascript -->
 <script src="homepage.js"></script>
