create work page update.

--- a/work.html
+++ b/work.html
@@ -40,13 +40,14 @@
   <!-- home banner end -->
 
   <!-- project section start-->
-    <!-- <section class="home-project">
-      <div class="project-wrapper">
-        <div class="project-heading">
+    <section class="home-project">
+      <div class="project-heading">
           <h5>Selected projects</h5>
           <h1>Projects</h1>
-        </div> -->
-<!--
+      </div>
+      <div class="project-wrapper">
+
+
         <div class="project-list">
           <div class="project-list-item">
             <img src="image/ebae.jpg" alt="" class="project-image">
@@ -60,7 +61,7 @@
 
         <div class="project-list">
           <div class="project-list-item">
-            <img src="image/c3.jpg" alt="" class="project-image">
+            <img src="image/heji.jpg" alt="" class="project-image">
               <div class="overlay">
                 <div class="overlay-content">
                   <span>Heji</span>
@@ -69,7 +70,18 @@
           </div>
         </div>
 
- -->
+        <div class="project-list">
+          <div class="project-list-item">
+            <img src="image/c4.jpg" alt="" class="project-image">
+              <div class="overlay">
+                <div class="overlay-content">
+                  <span>onTap</span>
+                </div>
+              </div>
+          </div>
+        </div>
+
+
 
       </div>
     </section>
@@ -88,4 +100,5 @@
 </html>
 
 
-transform: translate(50%, -100%);
+<!-- transform: translate(50%, -100%);
+ -->
